--- a/calculator/css/style.css
+++ b/calculator/css/style.css
@@ -1,20 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Lemonada|Oxygen');
 
 body{
-   background-color: #d8d5e5; 
+   background-color: #d8d5e5;
+   margin-top: 30px;
 }
 .calBody{
-    position: relative;
-    top: 150px;
-    left: 550px;
     width: 350px;
-    margin: 10px 0;
-    padding: 10px 0;
+    margin: 0 auto;
     font-family: 'oxygen' cursive;
     border-radius: 20px;
     box-shadow: 5px 5px 15px #333;
     background-color: #383730;
-    display: inline-block;
 }
 .calRow button{
     margin: 7px 5px 8px 10px;
