--- a/weather1/css/weather.css
+++ b/weather1/css/weather.css
@@ -3,12 +3,19 @@ body{
 	margin-top: 50px;
 
 }
-h1,h2{
+h1{
+	font-family: 'Indie Flower', cursive;
+	color: #fff;
+	font-size: 6em;
+}
+h2{
 	color: #fff;
 	font-size: 5em;
 }
 h3{
+	font-family: 'Indie Flower', cursive;
 	color: #fff;
+	font-size: 3em;
 }
 .box1{
 	margin-top: 50px;
